# kodo.inotify

./: .gitignore  .pre-commit-config.yaml  README.md  meson.build  meson.options  pyproject.toml
scripts/: generate-docstrings.py
src/: event.c  event.h  flag.c  flag.h  inotify.c  inotify.h  inotify.pyi  module.c  module.h
tests/integration/: test.py
tests/unit/: test_inotifyevent.py
